// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> Default story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby="4"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id="4"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="1"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="1"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="2"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="2"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="3"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="3"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </article>
</div>
`;

exports[`<Filters /> OverflowInteractive story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby="20"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id="20"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body filters-drawer"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="21"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="21"
            >
              Filters long label 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="22"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="22"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="23"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="23"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 2
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="24"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="24"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="25"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="25"
            >
              Filters long label 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="26"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="26"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 3
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="27"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="27"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="28"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="28"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="29"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="29"
            >
              Filters long label 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 4
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="30"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="30"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="31"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="31"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="32"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="32"
            >
              Filters label 3
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="33"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="33"
            >
              Filters label 4
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="34"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="34"
            >
              Filters label 5
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="35"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="35"
            >
              Filters label 6
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary footer__button"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          Clear All
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary footer__button"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Apply
        </button>
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Filters /> WithOnApplyAndCustomButtonGroup story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby="15"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id="15"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="16"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="16"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="17"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="17"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="18"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="18"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group button-group__apply-only"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary footer__button"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Apply
        </button>
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Filters /> WithOnClear story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby="10"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id="10"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="11"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="11"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="12"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="12"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="13"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="13"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary footer__button"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          Clear All
        </button>
      </div>
    </footer>
  </article>
</div>
`;
